@@ -175,6 +175,7 @@ t/07_Dialog_Renumber.t
 t/081_Frontend_CLI.t
 t/0821_Frontend_Sane.t
 t/0822_Frontend_Sane.t
+t/0823_Frontend_Sane.t
 t/09_EntryCompletion.t
 t/1.gs2p
 t/10_Document.t
